# python-slip

./: .gitignore  AUTHORS  Makefile  git_rules.mk  github_rules.mk  py_rules.mk  python-slip.spec  scm_rules.mk  setup.py.in  upload_rules.mk
doc/dbus/: README
doc/dbus/example/: Makefile  README  example-conf-client.py  example-conf-mechanism.py  org.fedoraproject.slip.example.mechanism.conf  org.fedoraproject.slip.example.policy
example/: Makefile  Makefile.am  README  example-conf-client.py  example-conf-mechanism.py  org.fedoraproject.config.example.mechanism.conf  org.fedoraproject.config.example.mechanism.service  org.fedoraproject.config.example.policy  org.fedoraproject.slip.example.mechanism.conf  org.fedoraproject.slip.example.mechanism.service  org.fedoraproject.slip.example.policy
slip/: gtk.py
slip/_wrappers/: _gobject.py  glib.py
slip/dbus/: __init__.py  bus.py  constants.py  introspection.py  mainloop.py  polkit.py  proxies.py  proxy.py  service.py
slip/dbus/examples/: README  example_client.py  example_service.py
slip/gtk/: __init__.py  tools.py
slip/util/: __init__.py  files.py  hookable.py
