
service_DATA = org.fedoraproject.config.example.mechanism.service
servicedir = $(datarootdir)/dbus-1/system-services

conf_DATA = org.fedoraproject.config.example.mechanism.conf
confdir = $(sysconfdir)/dbus-1/system.d

policy_DATA = org.fedoraproject.config.example.policy
policydir = $(datarootdir)/PolicyKit/policy

libexec_SCRIPTS = example-conf-mechanism.py
